<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#00000000" 
    android:id="@+id/llTitle">  
    <TextView android:id="@+id/edit_head"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/welcome" />       
    <EditText android:id="@+id/edit_message"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:hint="@string/search_message" />
    <Button
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
  	  	android:text="@string/button_send"
    	android:onClick="submitSearch" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_guides"
        android:onClick="openSavedGuides" />
    <Button
    	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_local_guide"
        android:onClick="addALocalFile" />
</LinearLayout>